--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 </section>
     </section>
         <section class="imagemeta" >
-         <img class="imagemeta__imagem" src="assets/produtos.svg" alt="Produtos de comédicos"  data-aos="fade-downs">
-            <h2 class="texto2" data-aos="fade-downs">Nada de fórmula mágica, aqui a gente trabalha com sinceridade. Nossos cosméticos são de marcas conhecidas e, utilizados de forma correta, vão te trazer bem-estar e te ajudar a chegar no seu objetivo. 
+         <img class="imagemeta__imagem" src="assets/produtos.svg" alt="Produtos de comédicos"  data-aos="fade-up"   >
+            <h2 class="texto2" data-aos="fade-up">Nada de fórmula mágica, aqui a gente trabalha com sinceridade. Nossos cosméticos são de marcas conhecidas e, utilizados de forma correta, vão te trazer bem-estar e te ajudar a chegar no seu objetivo. 
             <strong class="titulo-destaque">  Venha conferir a nossa linha e aproveite para ganhar algumas amostras grátis</strong>.
         </h2>
     </section>
@@ -101,18 +101,18 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="assets/perfume1.svg" alt="Livro Apache Kafka"></div>
-                    <div class="swiper-slide"><img src="assets/perfume2.svg" alt="Livro Java script"></div>
-                    <div class="swiper-slide"><img src="assets/perfume3.svg" alt="Livro Liderança"></div>
-                    <div class="swiper-slide"><img src="assets/perfume4.svg" alt="Livro MetricasAgeis"></div>
-                    <div class="swiper-slide"><img src="assets/perfume5.svg" alt="Livro Portugol"></div>
+                    <div class="swiper-slide"><img src="assets/perfume1.svg" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/perfume2.svg" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/perfume3.svg" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/perfume4.svg" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/perfume5.svg" alt=""></div>
                     
                     ...
                 </div>
         </div>
     </section>
     <section class="cartao__destaque">
-        <div id="cartao__1" class="cartao__1"  data-aos="fade-left">
+        <div id="cartao__1" class="cartao__1" data-aos="fade-up" >
             <img class="imagem__cartao" src="assets/makeup.svg" alt="Maquiagem">
             <h2 class="titulo__cartao">Beleza</h2>
             <p class="texto__cartao">
@@ -126,7 +126,7 @@
                 Muitos dos ativos tradicionais do skincare facial estão sendo incorporados em formulações para os cabelos e o corpo.
             </p>
         </div>
-        <div id="cartao__3" class="cartao__1" data-aos="fade-right" >
+        <div id="cartao__3" class="cartao__1" data-aos="fade-up" >
             <img class="imagem__cartao" src="assets/spray.svg" alt="Spray">
             <h2 class="titulo__cartao">Desempenho</h2>
             <p class="texto__cartao">
@@ -212,6 +212,7 @@
     <script>
         AOS.init({
         duration: 1500,
+        
     });
     </script>
 </body>
